0805 cs1-onesample tweaks

--- a/cs1-practical-one_sample_t_test.Rmd
+++ b/cs1-practical-one_sample_t_test.Rmd
@@ -221,8 +221,7 @@ hist(fishlength_r, breaks = 15)
 
 ```{python, results='hide'}
 (
-  fishlength_py >> \
-  ggplot(aes(x = "length"))
+  ggplot(fishlength_py, aes(x = "length"))
   + geom_histogram(bins = 15)
 )
 ```
@@ -265,8 +264,7 @@ qqline(fishlength_r)
 
 ```{python, results='hide'}
 (
-  fishlength_py >> \
-  ggplot(aes(sample = "length"))
+  ggplot(fishlength_py, aes(sample = "length"))
   + stat_qq()
   + stat_qq_line()
 )
@@ -591,8 +589,8 @@ We can look at the histogram and box plot of the data:
 ```{python, results='hide'}
 # create a histogram
 (
-dissolving_py >> \
-  ggplot(aes(x = "dissolving_time"))
+  ggplot(dissolving_py,
+    aes(x = "dissolving_time"))
   + geom_histogram(bins = 4)
 )
 ```
@@ -600,8 +598,8 @@ dissolving_py >> \
 ```{python, results='hide'}
 # create a box plot
 (
-  dissolving_py >> \
-  ggplot(aes(x = 1, y = "dissolving_time"))
+  ggplot(dissolving_py,
+    aes(x = 1, y = "dissolving_time"))
   + geom_boxplot()
 )
 ```
@@ -661,8 +659,8 @@ stats.shapiro(dissolving_py.dissolving_time)
 ```{python, results='hide'}
 # Create a Q-Q plot
 (
-  dissolving_py >> \
-  ggplot(aes(sample = "dissolving_time"))
+  ggplot(dissolving_py,
+    aes(sample = "dissolving_time"))
   + stat_qq()
   + stat_qq_line()
 )
