1306 partial 2 samp t-test

--- a/cs1-practical-two_sample_mann_whitney.Rmd
+++ b/cs1-practical-two_sample_mann_whitney.Rmd
@@ -1,5 +1,8 @@
 ```{r, echo=FALSE}
 source(file = "setup.R")
+
+xaringanExtra::use_panelset()
+xaringanExtra::style_panelset_tabs(font_family = "inherit")
 ```
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
