--- a/cs1-practical-two_sample_t_test.Rmd
+++ b/cs1-practical-two_sample_t_test.Rmd
@@ -1,5 +1,8 @@
 ```{r, echo=FALSE}
 source(file = "setup.R")
+
+xaringanExtra::use_panelset()
+xaringanExtra::style_panelset_tabs(font_family = "inherit")
 ```
 
 # Student's t-test {#cs1-students-t-test}
@@ -9,14 +12,60 @@ For this test we assume that both sample data sets are **normally distributed** 
 The language used in this section is slightly different to that used in section \@ref(cs1-one-sample-tests). Although the language used in section \@ref(cs1-one-sample-tests) was technically more correct, the sentences are somewhat more onerous to read. Here I’ve opted for an easier reading style at the expense of technical accuracy. Please feel free to re-write this section (at your own leisure).
 :::
 
-## Section commands
-New commands used in this section:
+## Libraries and functions
+::::: {.panelset}
+
+::: {.panel}
+[tidyverse]{.panel-name}
+
+| Libraries| Description|
+|:- |:- |
+|`library(tidyverse)`| A collection of R packages designed for data science |
+|`library(rstatix)`| Converts base R stats functions to a tidyverse-friendly format. Also contains extra functionality that we'll use.|
+
+| Functions| Description|
+|:- |:- |
+|`rstatix::get_summary_stats()`| Computes summary statistics |
+|`rstatix::levene_test()`| Perform Levene's test for equality of variance (non-normally distributed data) |
+|`bartlett.test()`| Perform Bartlett's test for equality of variance (normally distributed data) |
+:::
+
+::: {.panel}
+[base R]{.panel-name}
+
+| Libraries| Description|
+|:- |:- |
+|`library(car)`| Companion to Applied Regression, provides additional statistical functionality.|
 
 | Function| Description|
 |:- |:- |
-|`get_summary_stats()`| Computes summary statistics |
+|`aggregate()`| Splits the data into subsets, computes summary statistics for each, and returns the result in a convenient form |
+|`unstack()`| Converts a stacked data frame into an unstacked data frame (or a list if the lengths of the samples are different) |
 |`bartlett.test()`| Perform Bartlett's test for equality of variance (normally distributed data) |
-|`levene_test()`| Perform Levene's test for equality of variance (non-normally distributed data) |
+|`car::leveneTest()`| Perform Levene's test for equality of variance (non-normally distributed data) |
+:::
+
+::: {.panel}
+[Python]{.panel-name}
+
+| Libraries| Description|
+|:- |:- |
+|`plotnine`| The Python equivalent of `ggplot2`.|
+|`pandas`| A Python data analysis and manipulation tool.|
+|`scipy.stats`| A Python module containing statistical functions.|
+
+| Functions| Description|
+|:- |:- |
+
+
+```{python, echo=FALSE, results='hide'}
+from plotnine import *
+from scipy import stats
+import pandas as pd
+```
+
+:::
+:::::
 
 ## Data and hypotheses
 For example, suppose we now measure the body lengths of male guppies (in mm) collected from two rivers in Trinidad; the Aripo and the Guanapo. We want to test whether the mean body length differs between samples. We form the following null and alternative hypotheses:
@@ -32,16 +81,59 @@ We use a two-sample, two-tailed t-test to see if we can reject the null hypothes
 
 The data are stored in the file `data/tidy/CS1-twosample.csv`.
 
-Read this into R:
+Let's read in the data and have a quick look at the first rows to see how the data is structured.
 
-```{r cs1-twosample-data, message=FALSE, warning=FALSE}
+::::: {.panelset}
+::: {.panel}
+[tidyverse]{.panel-name}
+
+```{r, message=FALSE, warning=FALSE}
 rivers <- read_csv("data/tidy/CS1-twosample.csv")
+
+rivers
 ```
 
-## Summarise and visualise {#cs1-students-sumvisual}
-Let's summarise the data...
+:::
 
-```{r cs1-twosample-rivers-summary}
+::: {.panel}
+[base R]{.panel-name}
+
+```{r}
+rivers_r <- read.csv("data/tidy/CS1-twosample.csv")
+
+head(rivers_r)
+```
+
+:::
+
+::: {.panel}
+[Python]{.panel-name}
+
+```{python}
+rivers_py = pd.read_csv("data/tidy/CS1-twosample.csv")
+
+rivers_py.head()
+```
+
+:::
+:::::
+
+## Summarise and visualise {#cs1-students-sumvisual}
+Let's first summarise the data.
+
+::::: {.panelset}
+::: {.panel}
+[tidyverse]{.panel-name}
+
+```{r}
+summary(rivers)
+```
+
+This gives us the standard summary statistics, but in this case we have more than one group (Aripo and Guanapo), so it might be helpful to get summary statistics _per group_. One way of doing this is by using the `get_summary_stats()` function from the `rstatix` library.
+
+We don't need summary statistics for the `id` column, so we un-select it. We then group the data by `river` and get the summary stats:
+
+```{r}
 # get common summary stats for the length column
 rivers %>% 
   select(-id) %>% 
@@ -49,15 +141,66 @@ rivers %>%
   get_summary_stats(type = "common")
 ```
 
-and visualise it:
+Numbers might not always give you the best insight into your data, so we also visualise our data:
 
-```{r cs1-twosample-rivers-boxplot}
+```{r}
 rivers %>% 
   ggplot(aes(x = river, y = length)) +
   geom_boxplot()
 ```
+:::
 
-The boxplot does appear to suggest that the two samples have different means, and moreover that the guppies in Guanapo may be smaller than the guppies in Aripo. It isn’t immediately obvious that the two populations don’t have equal variances though, so we plough on.
+::: {.panel}
+[base R]{.panel-name}
+```{r}
+summary(rivers)
+```
+
+This gives us the standard summary statistics, but in this case we have more than one group (Aripo and Guanapo), so it might be helpful to get summary statistics _per group_. We can do this in base R using the `aggregate()` function.
+
+```{r}
+aggregate(length ~ river, data = rivers_r, summary)
+```
+
+* The first argument defines the variable that is being used (`length`) and grouping (`river`)
+* The second argument is the data frame that is used
+* The third argument defines the function that is applied across the subsets (in this case that's the `summary()` function)
+
+Numbers might not always give you the best insight into your data, so we also visualise our data:
+
+```{r}
+boxplot(length ~ river,
+        data = rivers_r)
+```
+
+We can use a very similar notation as we did for the summary statistics (`length ~ river`), so a box plot is created per group.
+:::
+
+::: {.panel}
+[Python]{.panel-name}
+```{python}
+rivers_py.describe()
+```
+
+This gives us the standard summary statistics, but in this case we have more than one group (Aripo and Guanapo), so it might be helpful to get summary statistics _per group_. Here we use the `pd.groupby()` function to group by `river`. We only want to have summary statistics for the `length` variable, so we specify that as well:
+
+```{python}
+rivers_py.groupby("river")["length"].describe()
+```
+
+Numbers might not always give you the best insight into your data, so we also visualise our data:
+
+```{python, results='hide'}
+(
+  ggplot(rivers_py, aes(x = "river", y = "length"))
+  + geom_boxplot()
+)
+```
+
+:::
+:::::
+
+The box plot does appear to suggest that the two samples have different means, and moreover that the guppies in Guanapo may be smaller than the guppies in Aripo. It isn’t immediately obvious that the two populations don’t have equal variances though (box plots are not quite the right tool for this), so we plough on. Who ever said statistics would be glamorous?
 
 ## Assumptions
 In order to use a Student’s t-test (and for the results to be strictly valid) we have to make three assumptions:
@@ -71,66 +214,190 @@ In this example the first assumption can be ignored as the sample sizes are larg
 The second point we can do nothing about unless we know how the data were collected, so again we ignore it.
 
 The third point regarding equality of variance can be tested using either Bartlett’s test (if the samples are normally distributed) or Levene’s test (if the samples are not normally distributed).
+
 This is where it gets a bit trickier. Although we don’t care if the samples are normally distributed for the t-test to be valid (because the sample size is big enough to compensate), we do need to know if they are normally distributed in order to decide which variance test to use.
 
 So we perform a [Shapiro-Wilk test](#shapiro-wilk-test) on both samples separately.
 
-```{r cs1-twosample-shapiro-river}
+::::: {.panelset}
+::: {.panel}
+[tidyverse]{.panel-name}
+We can use the `group_by()` function to group the data by `river`, then we perform the Shapiro-Wilk test on the `length` measurements:
+
+```{r}
 # group data by river and perform test
 rivers %>% 
   group_by(river) %>% 
   shapiro_test(length)
 ```
 
+:::
+
+::: {.panel}
+[base R]{.panel-name}
+Before we can do that, we need to convert the data to a format where the data is split by `river`:
+
+```{r cs1-twosample-unstack, results='hide'}
+# create a new object (a list) that contains the unstacked data
+uns_rivers <- unstack(rivers_r, select = -id, form = length ~ river)
+# have a look at the data
+uns_rivers
+```
+
+Now that we've separated the data by river we can perform the Shapiro-Wilk test:
+
+```{r cs1-twosample-shapiro}
+shapiro.test(uns_rivers$Aripo)
+
+shapiro.test(uns_rivers$Guanapo)
+```
+:::
+
+::: {.panel}
+[Python]{.panel-name}
+We first need to split the data by `river`.
+```{python}
+rivers_py.groupby("river")["length"] \
+.apply(lambda x: pd.Series(stats.shapiro(x), index=['W-stat','p-value'])) \
+.reset_index()
+```
+
+The code is a bit convoluted and perhaps there is a more efficient way that I'm not aware of. Anyway, we can do this with the `groupby()` function from pandas. Next, we only select the `length` measurements and use the `.apply()` function to apply the `stats.shapiro()` test over each group. This returns two values per group: the W-statistic that the Shapiro-Wilk test uses and, the value we're most interested in, the p-value. Lastly,we use the `.reset_index()` function to repeat the grouping name.
+
+:::
+:::::
 We can see that whilst the Guanapo data is probably normally distributed (p = 0.1764 > 0.05), the Aripo data is unlikely to be normally distributed (p = 0.02802 < 0.05). Remember that the p-value gives the probability of observing each sample if the parent population is actually normally distributed.
 
 The Shapiro-Wilk test is quite sensitive to sample size. This means that if you have a large sample then even small deviations from normality will cause the sample to fail the test, whereas smaller samples are allowed to pass with much larger deviations. Here the Aripo data has nearly 40 points in it compared with the Guanapo data and so it is much easier for the Aripo sample to fail compared with the Guanapo data.
 
 ## Exercise: Q-Q plots rivers {#exercise-qq-rivers}
-:::exercise
+:::exercise ::::::
+
 Q-Q plots for `rivers` data
 
 Create the Q-Q plots for the two samples and discuss with your neighbour what you see in light of the results from the above Shapiro-Wilk test.
 
 <details><summary>Answer</summary>
+::::: {.panelset}
+::: {.panel}
+[tidyverse]{.panel-name}
 
-```{r cs1-twosample-qqplot}
+```{r}
 # we group the data by river
 # then create a panel per river
 # containing the Q-Q plot for that river
 rivers %>% 
-  group_by(river) %>%
   ggplot(aes(sample = length)) +
   stat_qq() +
   stat_qq_line(colour = "red") +
   facet_wrap(facets = vars(river))
 ```
-
-The Q-Q plots mirror what we found with the Shapiro-Wilk tests: the data for Aripo are pretty normally distributed, whereas the assumption of normality for the Guanapo data is less certain.
-
-</details>
 :::
 
-<br />
+::: {.panel}
+[base R]{.panel-name}
+```{r}
+par(mfrow=c(1,2))
+qqnorm(uns_rivers$Aripo, main = "Aripo")
+qqline(uns_rivers$Aripo, col = "red")
+
+qqnorm(uns_rivers$Guanapo, main = "Guanapo")
+qqline(uns_rivers$Guanapo, col = "red")
+```
+
+:::
+
+::: {.panel}
+[Pyhon]{.panel-name}
+```{python, results='hide'}
+(
+  ggplot(rivers_py, aes(sample = "length"))
+  + stat_qq()
+  + stat_qq_line(colour = "red")
+  + facet_wrap("river")
+)
+```
+
+:::
+:::::
+
+The Q-Q plots show the opposite of what we found with the Shapiro-Wilk tests: the data for Aripo look pretty normally distributed, whereas the assumption of normality for the Guanapo data is less certain.
+
+What to do? Well, you could be conservative and state that you are not confident that the data in either group are normally distributed. That would be a perfectly reasonable conclusion.
+
+I would personally not have issues with stating that the Aripo data are probably normally distributed _enough_.
+</details>
+::::::::::::::::::
 
 ## Equality of variance
 :::highlight
 Remember that statistical tests do not provide answers, they merely suggest patterns. Human interpretation is still a crucial aspect to what we do.
 :::
 
-The Shapiro-Wilk test has shown that the data are not normal _enough_ and so in order to test for equality of variance we will use Levene’s test.
+The reason why we're checking for equality of variance (also referred to as **homogeneity of variance**) is because many statistical tests assume that the spread of the data within different parental populations (in this case, two) is the same. 
 
-```{r cs1-twosample-levene, warning=FALSE}
+If that is indeed the case, then the data themselves should have equal spread as well.
+
+The Shapiro-Wilk test and the Q-Q plots have shown that some of the data might not be normal _enough_ (although in opposite directions!) and so in order to test for equality of variance we will use Levene’s test.
+
+::::: {.panelset}
+::: {.panel}
+[tidyverse]{.panel-name}
+The function we use is `levene_test()` from the `rstatix` library.
+
+It takes the data in the form of a formula as follows:
+
+```{r, warning=FALSE}
 rivers %>% 
   levene_test(length ~ river)
 ```
 
-The key bit of information is the `p` column. This is the p-value (0.1876) for this test. And this tells us the probability of observing these two samples if they come from distributions with the same variance. As this probability is greater than our arbitrary significance level of 0.05 then we can be somewhat confident that the necessary assumptions for carrying out Student’s t-test on these two samples was valid. (Once again woohoo!)
+The key bit of information is the `p` column. This is the p-value (0.1876) for this test.
+:::
+
+::: {.panel}
+[base R]{.panel-name}
+Levene’s test is not included in the default R packages and may require the installation of an additional package called `car` (Companion to Applied Regression).
+
+To install the `car` package, run the following command in your console:
+
+```{r cs1-two-sample-car, eval=FALSE}
+install.packages("car")
+```
+
+Alternatively, go to <kbd>Tools</kbd> > <kbd>Install packages...</kbd> > <kbd>Packages</kbd>, type in `car` and press <kbd>Install</kbd>
+
+We can now perform Levene's test:
+
+```{r cs1-twosample-levene, warning=FALSE}
+leveneTest(length ~ river, data = rivers)
+```
+
+Ignore any warning you might get about coercion to factors (the test needs to create grouped variables to work and R versions from 4.x onwards do not read in the data as factors).
+
+The key bit of information is the 3rd line under the text `Pr(>F)`. This is the p-value for this test.
+:::
+
+::: {.panel}
+[Python]{.panel-name}
+Levene's test is included in the `stats` module in `scipy`. It requires two vectors as input, so we need to subset our data for each river:
+
+```{python}
+guanapo = rivers_py.query('river == "Guanapo"')["length"]
+aripo = rivers_py.query('river == "Aripo"')["length"]
+
+stats.levene(guanapo, aripo)
+```
+
+:::
+:::::
+
+The p-value tells us the probability of observing these two samples if they come from distributions with the same variance. As this probability is greater than our arbitrary significance level of 0.05 then we can be somewhat confident that the necessary assumptions for carrying out Student’s t-test on these two samples was valid. (Once again woohoo!)
 
 ### Bartlett's test
 If we had wanted to carry out Bartlett’s test (i.e. if the data _had_ been sufficiently normally distributed) then the command would have been:
 
-```{r cs1-twosample-bartlett}
+```{r}
 bartlett.test(length ~ river, data = rivers)
 ```
 
