--- a/index.qmd
+++ b/index.qmd
@@ -7,62 +7,70 @@ format:
       - sync-tabs.html
 ---
 
+**Authors and contributors:** Martin van Rongen, Matt Castle, Rob Nicholls, Holly Pavey, Vicki Hodgson
+
+------------------------------------------------------------------------
+
 Welcome to Core statistics!
 
 These sessions are intended to enable you to perform core data analysis techniques appropriately and confidently using R.
 
-- 6 lecture-practicals
-- Ongoing formative assessment exercises
-- No formal assessment
+-   6 lecture-practicals
 
-- No mathematical derivations
-- No pen and paper calculations
+-   Ongoing formative assessment exercises
 
-They are **not** a “how to mindlessly use a stats program” course!
+-   No formal assessment
+
+-   No mathematical derivations
+
+-   No pen and paper calculations
+
+They are **not** a "how to mindlessly use a stats program" course!
 
 ## Core aims
+
 There are several things that we try to achieve during this course.
 
-:::callout-note
+::: callout-note
 ## Course aims
+
 To know what to do when presented with an arbitrary data set e.g.
 
-1. Know what data analysis techniques are available
-2. Know which ones are allowable
-3. Be able to carry these out and understand the results
+1.  Know what data analysis techniques are available
+2.  Know which ones are allowable
+3.  Be able to carry these out and understand the results
 :::
 
 ## Core topics
 
-1. [Simple hypothesis testing](#cs1-intro)
-2. [Categorical predictor variables](#cs2-intro)
-3. [Continuous predictors](#cs3-intro) 
-4. [Two predictor variables](#cs4-intro)
-5. [Multiple predictor variables](#cs5-intro) 
-6. [Power analysis](#cs6-intro)
+1.  [Simple hypothesis testing](#cs1-intro)
+2.  [Categorical predictor variables](#cs2-intro)
+3.  [Continuous predictors](#cs3-intro)
+4.  [Two predictor variables](#cs4-intro)
+5.  [Multiple predictor variables](#cs5-intro)
+6.  [Power analysis](#cs6-intro)
 
 ## Practicals
 
-Each practical document is divided up into various sections. In each section there will be some explanatory text which should help you to understand what is going on and what you’re trying to achieve.
-There may be a list of commands relevant to that section which will be displayed in boxes like this:
+Each practical document is divided up into various sections. In each section there will be some explanatory text which should help you to understand what is going on and what you're trying to achieve. There may be a list of commands relevant to that section which will be displayed in boxes like this:
 
-:::callout-tip
-## Conditional  operators
+::: callout-tip
+## Conditional operators
 
-To set filtering conditions, use the following _relational operators_:
+To set filtering conditions, use the following *relational operators*:
 
-- `>` is greater than
-- `>=` is greater than or equal to
-- `<` is less than
-- `<=` is less than or equal to
-- `==` is equal to
-- `!=` is different from
-- `%in%` is contained in
- 
-To combine conditions, use the following _logical operators_:
- 
-- `&` AND
-- `|` OR
+-   `>` is greater than
+-   `>=` is greater than or equal to
+-   `<` is less than
+-   `<=` is less than or equal to
+-   `==` is equal to
+-   `!=` is different from
+-   `%in%` is contained in
+
+To combine conditions, use the following *logical operators*:
+
+-   `&` AND
+-   `|` OR
 :::
 
 ## Datasets {#index-datasets}
